# Izanagi

./: .gitignore  AGENTS.md  README.md
D3D11Hooking/: AGENTS.md  CMakeLists.txt  README.md
D3D11Hooking/src/: d3d11.def  d3d11_proxy.cpp  d3d11_stub_exports.inc  d3d11_stubs.asm  helper.cpp
D3D11TriangleHelloWorld/: CMakeLists.txt  README.md  shaders.hlsl
D3D11TriangleHelloWorld/src/: main.cpp
D3D12Hooking/: .gitignore  AGENTS.md  CMakeLists.txt  README.md  TODO.md  temp.def
D3D12Hooking/src/: d3d12.def  d3d12_proxy.cpp  d3d12_stubs.asm  helper.cpp
D3D12TriangleHelloWorld/: AGENTS.md  CMakeLists.txt  README.md  shaders.hlsl
D3D12TriangleHelloWorld/src/: main.cpp
VkHooking/: AGENTS.md  CMakeLists.txt  README.md
VkHooking/src/: helper_vulkan.cpp  vulkan.def  vulkan_proxy.cpp  vulkan_stub_exports.inc  vulkan_stubs.asm
VkTriangleHelloWorld/: CMakeLists.txt  README.md
VkTriangleHelloWorld/shaders/: triangle.vert
VkTriangleHelloWorld/src/: main.cpp
